bug: corrigi bug ao atualizar projeto